2005-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ParseExpr.java (ParseInfo,
        ParsePrimaryExpr): Add support for parsing
        boolean literal tokens.
        * tests/tcl/parseExpr.test: Test boolean literal
        parsing. Remove constraints for tests that pass.

2005-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ExprValue.java (getStringValue,
        toString): Use Util.printDouble() to create
        a string rep from a double.
        * tests/tcl/expr.test: Check for string rep of
        a double expr value.

2005-11-16  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ForCmd.java (cmdProc):
        Remove extra CONTINUE branch and add
        default switch block.
        * tests/tcl/for.test: Test for Tcl 8.4
        results and remove knownBug contstraints.
        * tests/tcl/interp.test: Use knownbug
        not knownBug as constraint name.
        * tests/tcl/switch.test: Update to switch
        tests from Tcl 8.4.

2005-11-16  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/EvalCmd.java (cmdProc):
        Invoke eval(TclObject) instead of eval(String).
        * src/jacl/tcl/lang/Interp.java (setResult, eval,
        checkCommonInteger, checkCommonDouble,
        checkCommonBoolean, checkCommonString):
        Increment new result TclObject ref count before
        decremeting the old result ref count in the
        setResult(TclObject) method. This matches the
        Tcl 8.4 impl. Double check that common objects
        are shared to catch possible ref count errors
        in user code. Increment and decrement the passed
        in TclObject ref count in eval(TclObject) to
        match the Tcl 8.4 impl of Tcl_EvalObjEx.
        * src/jacl/tcl/lang/NamespaceCmd.java (evalCmd):
        Invoke eval(TclObject) instead of eval(String).
        * src/jacl/tcl/lang/UplevelCmd.java (cmdProc):